Bug 485120 - Tooltips close when user attempts to scroll by dragging the scrollbar
Summary: Tooltips close when user attempts to scroll by dragging the scrollbar
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 487052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-06 06:46 UTC by Filip
Modified: 2024-05-15 12:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video demonstrating the bug (1.27 MB, video/webm)
2024-04-06 06:46 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip 2024-04-06 06:46:33 UTC
Created attachment 168211 [details]
video demonstrating the bug

SUMMARY
When user hovers over a text which outputs a tooltip and the text is large enough for it to have multiple lines user needs to scroll through. Tooltip closes when user attempts to scroll by dragging the scrollbar.

STEPS TO REPRODUCE
1. Open file in Kate which will activate LSP (I tested using qml and c++ files)
2. Reduce the Kate window size if needed so that the tooltip has multiple lines 
3. Hover over a function or some error and wait for the tooltip to display
4. Click on the scrollbar and try to drag it up/down -> Tooltip closes -> DEFECT

OBSERVED RESULT
Tooltips close when user attempts to scroll by dragging the scrollbar

EXPECTED RESULT
User is able to scroll through the tooltip by dragging the scrollbar. Tooltip doesn't close when doing so

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3
Kernel Version: 6.8.2-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6600K CPU @ 3.50GHz
Memory: 7.7 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970/PCIe/SSE2
Comment 1 Christoph Cullmann 2024-04-07 16:51:45 UTC
Ok, true, that is not that nice.
Comment 2 Bug Janitor Service 2024-04-07 19:07:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1447
Comment 3 Christoph Cullmann 2024-04-07 19:54:49 UTC
Git commit 5a49f3321a1cae375b6b4ac59f4997149c2eb2a9 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 07/04/2024 at 19:54.
Pushed by cullmann into branch 'master'.

Fix tooltip hides on trying to scroll using scrollbar

M  +5    -3    apps/lib/texthint/tooltip.cpp

https://invent.kde.org/utilities/kate/-/commit/5a49f3321a1cae375b6b4ac59f4997149c2eb2a9
Comment 4 Filip 2024-04-08 05:58:31 UTC
This was really fast. I verified the bug is fixed by compiling the Kate from source. Keep up the great work.
Comment 5 Waqar Ahmed 2024-05-15 12:41:20 UTC
*** Bug 487052 has been marked as a duplicate of this bug. ***