Fix tooltip hides on trying to scroll using scrollbar

BUG: 485120